Ukolovnik
=========

Simple task manager written in PHP and using MySQL as backend.


News
----

0.3 release

    * Several bugfixes.
    * Configurable language and style.
    * Improved timestamp display.
    * Icons for some actions for more copact view.
    * Added some statistics.

0.2 release (2006-02-20)

    * Many bugfixes.
    * Retain new lines in text.
    * Automatically submit form on select change.
    * Compact filter display.

0.1 release (2006-01-14)

    * Inititial release.
    * Support for most MySQL versions used in wild.
    * Basic functionality added.
