@@ -14,6 +14,7 @@ News
     * Improved timestamp display.
     * Icons for some actions for more copact view.
     * Added some statistics.
+    * Implemented category deleting.
 
 0.2 release (2006-02-20)
 
